--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title>Reakedex</title>
   </head>
   <body>
     <div id='root'>
